[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "radprompter"
authors = [{name = "Bardia Khosravi", email = "bardiakhosravi95@gmail.com"}, {name = "Theo Dapamede", email = "theo.dapamede@emory.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/BardiaKh/RadPrompter"
